--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 class="hdr">Kepchyk Paper Wall</h1>
     <h2 class="hdr-txt">Это служебный домен. Сервисы работающие на домене:</h2>
 </div>
+<div class="ctrd container-sm">
 <div class="row" style="margin-top: 165px;">
     <div class="col-md-4">
         <h6 class="prj-title">KPW</h6>
@@ -21,15 +22,33 @@
     </div>
     <div class="col-md-4">
         <h6 class="prj-title">KPW</h6>
-        <a class="prj-srvc">Link Shortener</a>
-        <p class="prj-desc">Сокращение ссылок </p>
+        <p class="prj-srvc">Link Shortener</p>
+        <p class="prj-desc">Сервис сокращение ссылок.</p>
     </div>
     <div class="col-md-4">
         <h6 class="prj-title">Kepchyk.me</h6>
-        <a class="prj-srvc">Mail Service</a>
-        <p class="prj-desc">Сервис электронной почты для Kepchyk.me</p>
+        <p class="prj-srvc">Mail Service</p>
+        <p class="prj-desc">Сервис электронной почты для <br>Kepchyk.me</p>
     </div>
-
+</div>
+<div class="row" style="margin-top: 30px;">
+    <div class="col-md-4">
+        <h6 class="prj-title">KPW</h6>
+        <p class="prj-srvc">Cloud, Image Drop</p>
+        <p class="prj-desc">Закрытое облако файлов и хостинг <br>изображений.</p>
+    </div>
+    <div class="col-md-4">
+        <h6 class="prj-title">KPW</h6>
+        <p class="prj-srvc">DNS</p>
+        <p class="prj-desc">Сервер имен для ускорения запросов,<br>доменных зон.</p>
+    </div>
+    <div class="col-md-4">
+        <h6 class="prj-title">KPW</h6>
+        <p class="prj-srvc">CDN</p>
+        <p class="prj-desc">Ускорение загрузки контента.</p>
+    </div>
+</div>
+<hr/>
 </div>
 
 <script src="<?=get_template_directory_uri();?>/js/bootstrap.min.js"></script>
